hvega/tests/specs/gallery/error/error3.vl
{
    "$schema": "https://vega.github.io/schema/vega-lite/v4.json",
    "data": {
        "url": "https://vega.github.io/vega-lite/data/cars.json"
    },
    "description": "Line chart with confidence interval band.",
    "encoding": {
        "x": {
            "field": "Year",
            "timeUnit": "year",
            "type": "temporal"
        }
    },
    "layer": [
        {
            "encoding": {
                "opacity": {
                    "value": 0.3
                },
                "y": {
                    "aggregate": "ci0",
                    "axis": {
                        "title": "Miles/Gallon"
                    },
                    "field": "Miles_per_Gallon",
                    "type": "quantitative"
                },
                "y2": {
                    "aggregate": "ci1",
                    "field": "Miles_per_Gallon"
                }
            },
            "mark": "area"
        },
        {
            "encoding": {
                "y": {
                    "aggregate": "mean",
                    "field": "Miles_per_Gallon",
                    "type": "quantitative"
                }
            },
            "mark": "line"
        }
    ]
}